<resources>
    <string name="app_name">sms_fowarder</string>
    <string name="permission_needed">Set permission to access SMS to use this app.</string>
    <string name="input_phone">66123456789</string>
    <string name="input_url">https://example.com</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="delete_record">Delete record</string>
    <string name="key_phones_preference">phones</string>
    <string name="label_add_sender">Sender (number or text)</string>
    <string name="label_sender">Sender</string>
    <string name="label_url">URL to send SMS</string>
    <string name="label_json_template">Json Payload Template</string>
    <string name="label_json_headers">Headers</string>
    <string name="label_ignore_ssl">Ignore SSL/TLS certificate errors</string>
    <string name="hint_sender">number or text</string>
    <string name="sender_recommendation">Use * symbol to catch any SMS</string>
    <string name="json_template_recommendation">Available placeholders %text%, %from%, %sentStamp%, %receivedStamp%, %sim%</string>
    <string name="error_empty_sender">Empty sender</string>
    <string name="error_empty_url">Empty URL</string>
    <string name="error_wrong_url">Wrong URL</string>
    <string name="error_wrong_json">Not a valid JSON object</string>
    <string name="asterisk">*</string>
    <string name="any">Any</string>
    <string name="confirm_delete">Do you really want to delete "%s" record?</string>
    <string name="notification_channel">Default</string>
<!--    <string name="btn_start">START</string>-->
<!--    <string name="btn_stop">STOP</string>-->
</resources>
