<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false" android:visibility="visible">

    <LinearLayout
            android:id="@+id/dialog_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/input_phone"
                android:text="@string/label_add_sender" tools:visibility="invisible" android:visibility="invisible"/>

        <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/hint_sender"
                android:inputType="text" tools:visibility="invisible" android:visibility="invisible"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-4dp"
                android:text="@string/sender_recommendation"
                android:textSize="10sp" tools:visibility="invisible" android:visibility="invisible"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/input_phone"
                android:text="@string/label_url"/>

        <EditText
                android:id="@+id/input_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif"
                android:hint="@string/input_url"
                android:inputType="textUri"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:labelFor="@+id/input_json_template"
                android:text="@string/label_json_template" tools:visibility="invisible" android:visibility="invisible"/>

        <EditText
                android:id="@+id/input_json_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:textSize="11sp"
                android:typeface="monospace" tools:visibility="invisible" android:visibility="invisible"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="-4dp"
                android:text="@string/json_template_recommendation"
                android:textSize="11sp" tools:visibility="invisible" android:visibility="invisible"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/input_json_headers"
                android:text="@string/label_json_headers" tools:visibility="invisible" android:visibility="invisible"/>

        <EditText
                android:id="@+id/input_json_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textSize="11sp"
                android:typeface="monospace" tools:visibility="invisible" android:visibility="invisible"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:visibility="invisible" tools:visibility="invisible">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@+id/input_ignore_ssl"
                    android:text="@string/label_ignore_ssl" tools:visibility="invisible"
                    android:visibility="invisible"/>

            <CheckBox
                    android:id="@+id/input_ignore_ssl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp" tools:visibility="invisible" android:visibility="invisible"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>